# itential_gait_mcp

./: .gitignore  README.md  gait_mcp.py  pyproject.toml  requirements.txt
